修改门店租赁统计页面

--- a/WebContent/crm/store_rent_info.html
+++ b/WebContent/crm/store_rent_info.html
@@ -132,7 +132,7 @@
                             <table class="table table-striped table-bordered" id="unit_store_usable">
                                 <tbody><tr class="bg-light-blue">
                                     <th>城市公司</th>
-                                    <th>单店平均计租面积(m<sup>2</sup>)</th>
+                                    <th>单店平均使用面积(m<sup>2</sup>)</th>
                                 </tr>
                                 </tbody>
                             </table>
