--- a/WebContent/cost_statistics/each_project_cost.html
+++ b/WebContent/cost_statistics/each_project_cost.html
@@ -5,9 +5,9 @@
     <title>成本控制</title>
     <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
     <link rel="stylesheet" type="text/css" href="plugins/fixed-columns/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="plugins/fixed-columns/css/bootstrap-table.css">
-    <link rel="stylesheet" type="text/css" href="plugins/fixed-columns/css/bootstrap-table-fixed-columns.css">
-    <link rel="stylesheet" type="text/css" href="plugins/fixed-columns/css/bootstrap-editable.css">
+    <!--<link rel="stylesheet" type="text/css" href="plugins/fixed-columns/css/bootstrap-table.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="plugins/fixed-columns/css/bootstrap-table-fixed-columns.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="plugins/fixed-columns/css/bootstrap-editable.css">-->
     <link href="../startbootstrap/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../crm/plugins/date-new/css/jquery-ui-1.9.2.custom.css" type="text/css">
     <link href="../startbootstrap/dist/css/sb-admin-2.css" rel="stylesheet">
@@ -18,13 +18,13 @@
     <!-- jQuery 2.2.0 -->
     <script src="../crm/plugins/jQuery/jQuery-2.2.0.min.js"></script>
     <script type="text/javascript" src="plugins/fixed-columns/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table.js"></script>
-    <script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-fixed-columns.js"></script>
-    <script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-zh-CN.min.js.js"></script>
-    <!---行内编辑使用的 1.1.5-->
-    <script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-editable.js"></script>
-    <!--封装了bootstrap-table对x-editable的使用-->
-    <script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-editable.js"></script>
+    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table.js"></script>-->
+    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-fixed-columns.js"></script>-->
+    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-zh-CN.min.js.js"></script>-->
+    <!--&lt;!&ndash;-行内编辑使用的 1.1.5&ndash;&gt;-->
+    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-editable.js"></script>-->
+    <!--&lt;!&ndash;封装了bootstrap-table对x-editable的使用&ndash;&gt;-->
+    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-editable.js"></script>-->
     <script type="text/javascript" src="../scripts/bidLibjsjquery3.0.js"></script>
     <script src="../crm/dist/js/headquarters/conversion_utils.js"></script>
     <script src="../crm/plugins/date-new/js/jquery-ui-1.9.2.custom.js" type = "text/javascript"></script>
@@ -54,11 +54,20 @@
             getCostLabor();//获取人工成本
         });
 
+        $(function(){
+            $("input").on("keyup",function(i,obj){
+                var
+                var reg = /^[1-9]+(.[0-9]{2})?$/;
+                var v= $(this).val();
+                if(!reg.test(v)){
+                    $(this).val(this.value.replace(/\D/g,''));
+                }
+
+            });
+        })
 
 
-        // $(window).resize(function () {
-        //     $('#cost_labor').bootstrapTable('resetView');
-        // });
+
         /**
          * 获取人工成本
          * **/
@@ -72,134 +81,29 @@
             doManager('costStatisticsManager','queryCostLabor',[storeNo,storeName,year,month],function (data) {
                 if(data.result){
                     var costLabor = JSON.parse(data.data).labor;
-                    var $table = $('#cost_labor');
-                    buildLaborTable($table,costLabor);
+
+
+                    for(var i=0;i<costLabor.length;i++){
+                        $("#labor_tb_1").append("<tr><td style='text-align: center'>"+(i+1)+"</td><td style='text-align: center'>"+costLabor[i].storeNo+"</td><td>"+costLabor[i].storeName+"</td></tr>");
+                        var labor_td="";
+                        for(var j=1;j<=12;j++){
+                           var emolument =  costLabor[i]["emolument"+j]==null?"":costLabor[i]["emolument"+j];
+                           var uniform_amortize = costLabor[i]["uniform_amortize"+j]==null?"":costLabor[i]["uniform_amortize"+j];
+                           var accommodation = costLabor[i]["accommodation"+j]==null?"":costLabor[i]["accommodation"+j];
+                           var subtotal = costLabor[i]["subtotal"+j]==null?"":costLabor[i]["subtotal"+j];
+                           labor_td=labor_td+"<td><input type='text' value='"+emolument+"'/></td><td><input type='text' value='"+uniform_amortize+"'/></td><td><input type='text' value='"+accommodation+"'></td><td><input readonly type='text' value='"+subtotal+"'></td>";
+                        }
+
+                        $("#labor_tb_2").append("<tr>"+labor_td+"<td><input type='text' value='"+costLabor[i].uniform_charge+"'></td></tr>");
+                    }
+
+
                 }
             },false);
 
         }
 
-        function buildLaborTable($el,data) {
-            var columns = [];
-            var firstRowTitle=[];
-            var secondTitle=[];
 
-
-
-            firstRowTitle.push({
-                title:"序号",
-                rowspan: 2,
-                valign: "middle",
-                halign: "center",
-                formatter: function (value, row, index){
-                    return  index+1;
-                }
-            });
-
-            firstRowTitle.push({
-                field: 'storeNo',
-                title:"门店编号",
-                rowspan: 2,
-                colspan:1,
-                valign: "middle",
-                halign: "center"
-            });
-
-            firstRowTitle.push({
-                field: 'storeName',
-                title:"门店名称",
-                rowspan: 2,
-                colspan:1,
-                valign: "middle",
-                halign: "center"
-            });
-
-
-
-            for (var i = 0; i < 12; i++) {
-                firstRowTitle.push({
-                    title:i+1+"月",
-                    valign: "middle",
-                    halign: "center",
-                    colspan:4,
-                    rowspan:1
-
-                });
-            }
-            firstRowTitle.push({
-                field: 'uniform_charge',
-                title:"工服年费",
-                rowspan: 2,
-                colspan:1,
-                valign: "middle",
-                halign: "center"
-            });
-            columns.push(firstRowTitle);
-
-            for(var j=0;j<12;j++){
-                secondTitle.push({
-                    field:"emolument"+(j+1),
-                    title:"员工薪酬",
-                    valign: "middle",
-                    halign: "center",
-                    colspan:1,
-                    rowspan:1,
-                    editable: {
-                        type: 'text',
-                        title: '员工薪酬',
-                        validate: function (v) {
-                            var reg=/^[1-9]+(.[0-9]{1,3})?$/
-
-
-                            if (!reg.test(v)) {
-
-                                return "请输入正确的薪酬";
-                            }
-                        }
-                    }
-                });
-
-                secondTitle.push({
-                    field:"uniform_amortize"+(j+1),
-                    title:"工服摊销",
-                    valign: "middle",
-                    halign: "center",
-                    colspan:1,
-                    rowspan:1
-                });
-                secondTitle.push({
-                    field:"accommodation"+(j+1),
-                    title:"住宿星店房租",
-                    valign: "middle",
-                    halign: "center",
-                    colspan:1,
-                    rowspan:1
-                });
-                secondTitle.push({
-                    field:"subtotal"+(j+1),
-                    title:"小计（元）",
-                    valign: "middle",
-                    halign: "center",
-                    colspan:1,
-                    rowspan:1
-
-                });
-
-            }
-
-            columns.push(secondTitle);
-
-            $el.bootstrapTable('destroy').bootstrapTable({
-                columns: columns,
-                data: data,
-                height:500,
-                showColumns : false,
-                fixedColumns: true,
-                fixedNumber:3,
-                search:false,
-                toolbar:false
-            });
-        }
     </script>
 </head>
 <style type="text/css">
@@ -219,20 +123,7 @@
     .ui-dialog .ui-dialog-titlebar-close span {
         display: none;
     }
-    table th,table td{border: 1px solid #e1e1e1; line-height: 30px; padding: 0 5px;word-wrap:break-word ;}
-    table span{color: #f00;}
-    table .trbg1{background-color: #f2d4d4;}
-    table .trbg2{background-color: #cff1aa;}
-    table .trbg3{background-color: #e2d7f0;}
-    table .trbg4{background-color: #f4f45a;}
-    table .trbg5{background-color: #3ed783;}
-    table .trbg6{background-color: #00b0f0;}
-    table .trbg7{background-color: #c4bd97;}
-    table .trbg8{background-color: #f00;}
-    table .trbg9{background-color: #ffc000;}
-    table .trbg10{background-color: #bfbfbf;}
-    table .trbg11{background-color: #92cddc;}
-    table .trbg12{background-color: #ff99ff;}
+
 
     .content-wrapper{background: #fff;}
     .nav-tabs-custom,.nav-tabs-custom > .tab-content{background: transparent;}
@@ -242,9 +133,12 @@
     .nav-tabs-custom > .nav-tabs > li:first-of-type.active > a{border-left: 1px solid #3a90cb;}
     .nav-tabs-custom > .nav-tabs{border-bottom: 1px solid #3a90cb; margin: 5px 0; }
     .nav-tabs-custom > .nav-tabs > li{margin-bottom: -1px;}
-    .table_list_box{
-        table-layout:fixed !important;
-    }
+    .table > tbody > tr > td,.table > tbody > tr > th{border: 1px solid #d1d1d1}
+    .table > tbody > tr > td p,.table > tbody > tr > th p{width: 100px; margin: 0;}
+    .table_x{max-width: 1700px;}
+    .no-padding{padding: 0;}
+    .table > tbody > tr > td{padding: 0;line-height: 35px}
+    .table > tbody > tr > td input{border: 0}
 </style>
 <body style="height: 100%">
 <div class="panel panel-primary" style="margin: 10px 5px 0 5px">
@@ -264,26 +158,110 @@
             <div class="tab-content no-padding">
                 <div class="tab-pane active" id="tab_1">
                     <form action="" method="post" class="pmsForm">
-                        <table width="100%">
+                        <table width="50%">
                             <tr>
-                                <td width="20%">
-                                    <p>门店编号：</p>
-                                    <p><input type="text"   id="storeNo_s"></p>
+                                <td width="10%">
+                                    <p>门店编码：</p>
+                                    <p><input type="text" id="storeNo_s" name="observe_month"></p>
                                 </td>
-                                <td width="20%">
+                                <td width="10%">
                                     <p>门店名称：</p>
-                                    <p><input type="text" id="storeName_s"/></p>
+                                    <p><input type="text" name="observe_person" id="storeName_s"/></p>
                                 </td>
-                                <td width="20%">
+                                <td width="10%">
                                     <p class="read">日期：</p>
-                                    <p class="read"><input type="text"   maxlength="12"  id="date_s"/></p>
+                                    <p class="read"><input type="text" readonly  maxlength="12" name="observe_date" id="observe_date"/></p>
                                 </td>
-
+                                <td width="10%" style="text-align: center">
+                                   <button  class="btn btn-primary" style="margin-bottom:-20px" >保存</button>
+                                </td>
+                                <td width="10%">
+                                    <button  class="btn btn-primary" style="margin-bottom:-20px" >导出</button>
+                                </td>
                             </tr>
                         </table>
-                        <table id="cost_labor" ></table>
+                        <div class="col-sm-3 no-padding">
+                            <table class="table" cellspacing="0" cellpadding="0" id="labor_tb_1">
+                                <tr>
+                                    <th style="line-height: 57px;text-align: center;background-color: #1ab7ea">序号</th>
+                                    <th style="line-height: 57px;text-align: center;background-color: #1ab7ea">编码</th>
+                                    <th style="line-height: 57px;text-align: center;background-color: #1ab7ea">门店名称</th>
+                                </tr>
+                                <tr id="labor_tr_1">
+                                </tr>
 
+                            </table>
+                        </div>
+                        <div class="col-sm-9 no-padding" style="overflow-x: scroll;margin-left:-1px">
+                            <table class="table table_x" cellspacing="0" cellpadding="0" id="labor_tb_2">
+                                <tr>
+                                    <th colspan="4" style="text-align: center">1月</th>
+                                    <th colspan="4" style="text-align: center">2月</th>
+                                    <th colspan="4" style="text-align: center">3月</th>
+                                    <th colspan="4" style="text-align: center">4月</th>
+                                    <th colspan="4" style="text-align: center">5月</th>
+                                    <th colspan="4" style="text-align: center">6月</th>
+                                    <th colspan="4" style="text-align: center">7月</th>
+                                    <th colspan="4" style="text-align: center">8月</th>
+                                    <th colspan="4" style="text-align: center">9月</th>
+                                    <th colspan="4" style="text-align: center">10月</th>
+                                    <th colspan="4" style="text-align: center">11月</th>
+                                    <th colspan="4" style="text-align: center">12月</th>
+                                    <th colspan="1" rowspan="2" style="text-align: center;vertical-align: middle">工服年费</th>
+                                </tr>
+                                <tr id="labor_tr_2">
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                    <th><p style="text-align: center">员工薪酬</p></th>
+                                    <th><p style="text-align: center">工服摊销</p></th>
+                                    <th><p style="text-align: center">住宿星店房租</p></th>
+                                    <th><p style="text-align: center">小计（元）</p></th>
+                                </tr>
 
+                            </table>
+                        </div>
                     </form>
                 </div>
                 <!-- /.tab-pane -->
